--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -58,38 +58,27 @@
     > section.posts
       width: 90%
 
-  section.sidebar
+  > a.brand
+    margin: 0 0 0 10px
+    padding: 8px 0 12px 0
+    font-family: "Lobster"
+    width: 30%
+
+  ul.nav, form.navbar-search, section.sidebar
     display: none
 
-  ul.nav
-    width: 50%
-    height: 40px
-
-    > a.brand
-      margin: 0 0 0 10px
-      padding: 8px 0 12px 0
-      font-family: "Lobster"
-      width: 30%
-
-    > li
-      display: none
-
 @media (max-width: 640px)
-  img
+  div.wp-caption, img.alignleft
     display: none
 
   html, body
     font: 12px Arial
 
   #container
-    width: 94%
+    width: 95%
 
   #content
 
     > section.posts
-      width: 92%
+      width: 90%
       padding-left: 0
-
-
-  div.wp-caption
-    display: none
