--- a/sass/_structure.sass
+++ b/sass/_structure.sass
@@ -222,7 +222,7 @@ ul.hide
 html, body
   background: #ffffff url(../img/bg.png) repeat
   color: #323445
-  min-width: 630px
+  min-width: 360px
   min-height: 100%
 
 #navbar-top
